--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style media="screen">
       body{
         margin: 0;
+        border: 10px solid #5b899a;
       }
       img{
         max-width: 100%; /*ancho máximo*/
